<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uetmbc.myapplication.MainActivity">
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/item2"
        android:icon="@drawable/ic_people_black_24dp"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/item3"
        android:icon="@drawable/ic_setttings_black_24dp"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/item4"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item6"
        android:title="@string/item6"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView">
        <menu>
            <item android:id="@+id/item6.1" android:title="@string/item6d1"/>
            <item android:id="@+id/item6.2" android:title="@string/item6d2"/>
        </menu>
    </item>
</menu>